@@ -5,8 +5,10 @@ export(.defaultScalarArguments)
 export(.extractScalarArguments)
 export(.showScalarArguments)
 export(AffinityParam)
+export(AgnesParam)
 export(ClaraParam)
 export(DbscanParam)
+export(DianaParam)
 export(HclustParam)
 export(KNNGraphParam)
 export(KmeansParam)
@@ -35,9 +37,11 @@ export(nestedClusters)
 export(pairwiseModularity)
 export(pairwiseRand)
 exportClasses(AffinityParam)
+exportClasses(AgnesParam)
 exportClasses(BlusterParam)
 exportClasses(ClaraParam)
 exportClasses(DbscanParam)
+exportClasses(DianaParam)
 exportClasses(FixedNumberParam)
 exportClasses(HclustParam)
 exportClasses(HierarchicalParam)
@@ -75,7 +79,9 @@ importFrom(S4Vectors,I)
 importFrom(S4Vectors,List)
 importFrom(S4Vectors,coolcat)
 importFrom(S4Vectors,setValidity2)
+importFrom(cluster,agnes)
 importFrom(cluster,clara)
+importFrom(cluster,diana)
 importFrom(cluster,pam)
 importFrom(igraph,"E<-")
 importFrom(igraph,E)
